--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Himanshu Arya</h1>
-							<p>Hi, I am a Web developer</p>
+							<h1 style="color: azure;">Himanshu Arya</h1>
+							<p style="margin: 0; color: azure;">Aspiring Full-Stack Web Developer</p>
+							<p style="margin: 0;">Aspiring software developer with a keen interest in learning and growing in the field of web development. Currently a 3th year B.Tech student, with experience in building basic MERN stack projects.Eager to gain hands-on experience and enhance my skills through an internship in a dynamic and supportive environment.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Projects</a></li>
 								<li style="margin: 6px;">
